[gd_scene load_steps=11 format=3 uid="uid://bd5465xkam62w"]

[ext_resource type="Theme" uid="uid://bkginljllrfm5" path="res://main_theme.tres" id="1"]
[ext_resource type="Script" path="res://Window.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bauin1qhbv52q" path="res://Bakgrundsbild i launchern2.0.png" id="3"]
[ext_resource type="FontFile" uid="uid://bqkc6pgu1hlux" path="res://Verdana.ttf" id="4"]
[ext_resource type="StyleBox" uid="uid://86osga6ourjx" path="res://play_button_style.tres" id="5"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/72/0 = Vector2(0, 0)
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/72/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/72/0/kerning_overrides/72/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_t6e1b"]
font_size = 72
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="2"]
Button/colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
Button/colors/font_color_disabled = Color(0.9, 0.9, 0.9, 0.2)
Button/colors/font_color_hover = Color(0.941176, 0.941176, 0.941176, 1)
Button/colors/font_color_pressed = Color(1, 1, 1, 1)
Button/constants/h_separation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = ExtResource("5")
Button/styles/hover = ExtResource("5")
Button/styles/normal = ExtResource("5")
Button/styles/pressed = ExtResource("5")

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("4")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="Theme" id="4"]
ProgressBar/colors/font_color = Color(0.941176, 0.941176, 0.941176, 1)
ProgressBar/colors/font_color_shadow = Color(0, 0, 0, 1)
ProgressBar/fonts/font = null
ProgressBar/styles/bg = ExtResource("5")
ProgressBar/styles/fg = null

[node name="Window" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1")
script = ExtResource("2")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 720.0
offset_bottom = 540.0
texture = ExtResource("3")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 79.0
theme_override_fonts/font = SubResource("1")
text = "Hexacraft"
label_settings = SubResource("LabelSettings_t6e1b")
horizontal_alignment = 1

[node name="CenterPlay" type="CenterContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -192.0

[node name="MarginPlay" type="MarginContainer" parent="CenterPlay"]
layout_mode = 2
theme_override_constants/margin_bottom = 128

[node name="Play" type="Button" parent="CenterPlay/MarginPlay"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 0
theme = SubResource("2")
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="Progress" type="ProgressBar" parent="CenterPlay/MarginPlay"]
visible = false
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
theme = SubResource("4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -37.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Versions" type="OptionButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
flat = true

[node name="Filler" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Settings" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Settings"
flat = true

[node name="VersionListRequest" type="HTTPRequest" parent="."]

[node name="VersionDownloader" type="HTTPRequest" parent="."]
use_threads = true

[node name="DownloadProgress" type="Timer" parent="."]
wait_time = 0.1

[node name="MartoLibDownloader" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CenterPlay/MarginPlay/Play" to="." method="_on_Play_pressed"]
[connection signal="item_selected" from="MarginContainer/HBoxContainer/Versions" to="." method="_on_Versions_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="request_completed" from="VersionListRequest" to="." method="_on_VersionListRequest_request_completed"]
[connection signal="request_completed" from="VersionDownloader" to="." method="_on_VersionDownloader_request_completed"]
[connection signal="timeout" from="DownloadProgress" to="." method="_on_DownloadProgress_timeout"]
[connection signal="request_completed" from="MartoLibDownloader" to="." method="_on_MartoLibDownloader_request_completed"]
